sidebar card z-index fix

--- a/components/Sidebar/styles.module.scss
+++ b/components/Sidebar/styles.module.scss
@@ -114,6 +114,7 @@
 		top: 50%;
 		left: 50%;
 		transform: translate(-50%, -50%);
+		z-index: 10;
 		//width: 100%;
 		width: 18vw;
 		display: flex;
